# yaschedule

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
docs/dev/: README.md
docs/dev/poetry/: README.md
tests/: config.py  tests.py
yaschedule/: core.py
