[tool.poetry]
name = "yaschedule"
version = "0.1.0"
description = ""
authors = ["StannisGr <bvc344@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests-cache = "^1.1.0"


[tool.poetry.group.dev.dependencies]
environs = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
