[tool.flake8]
extend-ignore = ['E731', 'W503']
extend-exclude = [
    '.git',
    '__pycache__',
    'env',
    '.env',
    '.env.test',
    '.dockerignore',
    'venv',
    'migrations'
]
per-file-ignores = [
    '__init__.py:F401,F403,E402',
    'wsgi.py:F401',
    'router.py:F401,F403,E402'
]
max-complexity = 8
max-line-length = 120

[tool.black]
line-length = 120
extend-exclude = '''
    (
        ^/migrations
    )
'''

[tool.bandit]
exclude_dirs = ["client", "tests", "venv"]
#tests = ["B201", "B301"]
#skips = ["B101", "B601"]

[tool.poetry]
name = "yaschedule"
version = "0.1.0"
description = ""
authors = ["StannisGr <bvc344@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests-cache = "^1.1.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.dev.dependencies]
environs = "^9.5.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.6.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
